# smarthome

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  FINAL_INGRESS_FIX.md  INGRESS_FIX.md  Justfile  README.md  SONOS_ROUTING_GUIDE.md  TODO.md  bootstrap.sh  build.sh  check-hass-configs.sh  check.sh  deploy  diagnostic.sh  get-hass-configs.sh  msg  put-hass-configs.sh  recipe.xml  requirements.txt  setup.md  start-hass.sh  start-zwave-js.sh
API/: api.js  index.js  package-lock.json  package.json  server.js
Ansible/: .gitignore  Dockerfile  README.md  ansible-env.sh  ansible.cfg  ansible.sh  bootstrap.sh  create-image.sh  deploy.sh  deploy.yml  deploy5.sh  deploy5.yml  inventory.ini  inventory.template  playbook.yml  post_init.ini  post_init5.ini  pre_init.ini  run.sh  set-hostname.sh  set-hostname.yml  setup-networking.sh  setup-networking.yml  setup-wifi.sh  setup-wifi.yml  yamllint.sh
DashboardUI/: .eslintrc.js  .htaccess  build.sh  index.html  package-lock.json  package.json  tsconfig.json
ExpressServer/: .eslintrc.js  cache.js  cache.spec.ts  cache.ts  hue-manager.js  index.js  index.ts  package-lock.json  package.json  secret.js  tsconfig.json  tslint.json  webpack.config.js
FlaskServer/: build.sh  pyproject.toml
FlaskServer/src/flaskserver/: app.py  eight.py  main.py  secrets.yml  vault.py
HomeAssistantConfig/: .gitignore  automations.yaml  configuration.yaml  metaconfig.yaml  scenes.yaml  zwcfg_0xef979358.xml
HueIntegration/: README.md
MetaHassConfig/: .gitignore  metaconfig.yaml  requirements.txt  setup.py
OctoPrintConfig/: config.yaml  users.yaml
PiBakeryImage/: images.json
ansible/: id_rsa  inventory  provision.yml  run.sh
docs/: CONSISTENCY-CHECK.md  HOOK-CONSISTENCY-UPDATE.md  HOOK-REFACTORING-DRY.md  README.md  SUMMARY.md  TODO.md  container-runtime.md  deployment-enhancement-plan.md  dev-setup.md  hooks-guide.md  just-dev-output-example.md  justfile-compliance-report.md  justfile-infrastructure-completion-report.md  local-development.md  new-build-system.md  setup.md  sonos-addons-overview.md  version-consistency-diagram.md  version-management.md
donor/: README.md  get-hass-configs.sh  setup.md
grid-dashboard/: .gitignore  AGENTS.md  Justfile  addon.yaml
hue/: .gitignore  hue-readme.md  in-register.json
mongodb/: .gitignore  AGENTS.md  Dockerfile  Justfile  README.md  addon.yaml  run.sh
new-hass-configs/: .gitignore  Justfile  MIGRATION_STATUS.md  PHASE3_QUICKSTART.md  README.md  automations.yaml  configuration.yaml  iterate.sh  scenes.yaml  scripts.yaml
ocho/: build.sh  pyproject.toml
ocho/src/ocho/: cli.py
printer/: .gitignore  AGENTS.md  Justfile  README.md  addon.yaml  mypy.toml  pyproject.toml  report.txt
printer/docs/: presets.md  ql810w-setup.md  ql810w-troubleshooting.md  testing.md  visual-diff.md
printer/local-dev/hooks/: pre_setup.sh  pre_start.sh
printer/scripts/: bootstrap_env.py  build_ha_addon.sh  deploy_ha_addon.sh  diagnose_ha_addon.sh  generate-visual-diff.py  setup.sh  visual-diff.sh
printer/src/printer_service/: __init__.py  app.py  best_by.py  label.py  label_specs.py  mongo.py  presets.py  preview.py  print_dispatcher.py
printer/src/printer_service/label_templates/: __init__.py  base.py  bb_2_weeks.py  best_by.py  bluey_label.py  bluey_label_2.py  daily_snapshot.py  helper.py  kitchen_label_printer.py  receipt_checklist.py
printer/src/printer_service/static/: app.js
printer/src/printer_service/templates/: base.html  bb_2_weeks.html  best_by.html  bluey_label.html  daily_snapshot.html  kitchen_label_printer.html  receipt_checklist.html
printer/tests/: conftest.py  test_app.py  test_best_by.py  test_bluey_meter_mode.py  test_browser_automation.py  test_countdown_functionality.py  test_dark_mode_preview.py  test_dark_mode_standalone.py  test_integration.py  test_label_orientation.py  test_mongo.py  test_navigation_issues.py  test_pillow_alias.py  test_preset_store.py  test_presets.py  test_presets_ui.py  test_visual_regression.py
printer/tests/test_label_templates/: test_base.py  test_helper.py  test_loader.py
talos/: README.md  build.sh  pyproject.toml  setup_dev_env.sh
talos/docs/: ARCHITECTURE.md  IMPROVEMENTS.md  USAGE.md
talos/just/: README.md  addon-template.just  common.just  nodejs.just  nvm.just  python.just  testing.just
talos/scripts/: container_runtime.sh  nvm_use.sh  python_use.sh  quality-assurance.py  setup_nvm.sh
talos/src/talos/: __init__.py  addon_builder.py  addons_runner.py  cli.py  dev.py  hooks.py  manage_ports.py  paths.py
talos/src/talos/templates/: DOCS.md.j2  Dockerfile.j2  apparmor.txt.j2  config.yaml.j2  run.sh.j2  translations_en.yaml.j2
talos/templates/: remote-deploy.sh.j2
talos/tests/: __init__.py  test_addon_builder.py  test_cli.py  test_deployment_integration.py  test_deployment_system.py  test_dev.py  test_justfile_infrastructure.py  test_nvm_use.py  test_printer_setup.py  test_python_use.py
(+429 files in other folders)
