[tool.poetry]
name = "flaskserver"
version = "0.0.0"
description = "smarterhome python"
authors = ["rtimmons"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^2.9.2"
pyyaml = "^5.4"
pyeight = "^0.1.4"
asyncio = "^3.4.3"
aiohttp = "^3.6.2"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
flaskserver = "flaskserver.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
