[tool.poetry]
name = "ocho"
version = "0.0.0"
description = "builds and deploys"
authors = ["rtimmons"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ocho = "ocho.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
