[project]
name = "talos"
version = "0.1.0"
description = "Smarthome build tooling"
requires-python = ">=3.10"
dependencies = [
    "click",
    "Jinja2",
    "PyYAML",
    "rich",
    "tomli",
]

[project.scripts]
talos = "talos.cli:app"

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talos"]
include = ["src/talos/templates/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
# By default, exclude slow tests
addopts = "-m 'not slow'"
